[gd_scene load_steps=7 format=2]

[ext_resource path="res://Controls/Scene_Changer.gd" type="Script" id=1]
[ext_resource path="res://Controls/controls.gd" type="Script" id=2]
[ext_resource path="res://Scripts/BG_Scroll.gd" type="Script" id=3]
[ext_resource path="res://Sprites/Stage_Test/final_destination_bg.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Debug Sprites/Wall.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Logo.png" type="Texture" id=6]

[node name="controls_ui" type="Node2D" index="0"]

[node name="Scene_Changer" type="Node" parent="." index="0"]

script = ExtResource( 1 )

[node name="contextual_help2" type="Label" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 420.0
margin_top = 650.0
margin_right = 840.0
margin_bottom = 680.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Press Spacebar When you are Ready"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Node" type="Control" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -30.0
margin_top = 110.0
margin_right = -30.0
margin_bottom = 110.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 2 )

[node name="contextual_help" type="Label" parent="Node" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 70.0
margin_top = -60.0
margin_right = 490.0
margin_bottom = -30.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Click on a key binding to reassign it, or press the Cancel action."
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="bindings" type="Control" parent="Node" index="1"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 80.0
margin_top = 50.0
margin_right = 120.0
margin_bottom = 90.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="ui_up" type="Control" parent="Node/bindings" index="0"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 50.0
margin_top = 50.0
margin_right = 90.0
margin_bottom = 90.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
size_flags_horizontal = 2
size_flags_vertical = 2
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="Node/bindings/ui_up" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 5.0
margin_top = 8.0
margin_right = 45.0
margin_bottom = 21.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Up"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Button" type="Button" parent="Node/bindings/ui_up" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 84.0
margin_top = -1.0
margin_right = 144.0
margin_bottom = 29.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 1

[node name="ui_down" type="Control" parent="Node/bindings" index="1"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 50.0
margin_top = 100.0
margin_right = 90.0
margin_bottom = 140.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
size_flags_horizontal = 2
size_flags_vertical = 2
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="Node/bindings/ui_down" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 5.0
margin_top = 8.0
margin_right = 45.0
margin_bottom = 21.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Down"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Button" type="Button" parent="Node/bindings/ui_down" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 84.0
margin_top = -1.0
margin_right = 144.0
margin_bottom = 29.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 1

[node name="ui_left" type="Control" parent="Node/bindings" index="2"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 50.0
margin_top = 150.0
margin_right = 90.0
margin_bottom = 190.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
size_flags_horizontal = 2
size_flags_vertical = 2
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="Node/bindings/ui_left" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 5.0
margin_top = 8.0
margin_right = 45.0
margin_bottom = 21.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Left"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Button" type="Button" parent="Node/bindings/ui_left" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 84.0
margin_top = -1.0
margin_right = 144.0
margin_bottom = 29.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 1

[node name="ui_right" type="Control" parent="Node/bindings" index="3"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 50.0
margin_top = 200.0
margin_right = 90.0
margin_bottom = 240.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
size_flags_horizontal = 2
size_flags_vertical = 2
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="Node/bindings/ui_right" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 5.0
margin_top = 8.0
margin_right = 45.0
margin_bottom = 21.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Right"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Button" type="Button" parent="Node/bindings/ui_right" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 84.0
margin_top = -1.0
margin_right = 144.0
margin_bottom = 29.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 1

[node name="jump" type="Control" parent="Node/bindings" index="4"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 50.0
margin_top = 250.0
margin_right = 90.0
margin_bottom = 290.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
size_flags_horizontal = 2
size_flags_vertical = 2
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="Node/bindings/jump" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 5.0
margin_top = 8.0
margin_right = 45.0
margin_bottom = 21.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Jump"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Button" type="Button" parent="Node/bindings/jump" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 84.0
margin_top = -1.0
margin_right = 144.0
margin_bottom = 29.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 1

[node name="shield" type="Control" parent="Node/bindings" index="5"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 50.0
margin_top = 300.0
margin_right = 90.0
margin_bottom = 340.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
size_flags_horizontal = 2
size_flags_vertical = 2
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="Node/bindings/shield" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 5.0
margin_top = 8.0
margin_right = 45.0
margin_bottom = 21.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Shield"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Button" type="Button" parent="Node/bindings/shield" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 84.0
margin_top = -1.0
margin_right = 144.0
margin_bottom = 29.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 1

[node name="ParallaxBackground" type="ParallaxBackground" parent="." index="3"]

editor/display_folded = true
layer = -1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
scroll_offset = Vector2( 0, 0 )
scroll_base_offset = Vector2( 0, 0 )
scroll_base_scale = Vector2( 1, 1 )
scroll_limit_begin = Vector2( 0, 0 )
scroll_limit_end = Vector2( 0, 0 )
scroll_ignore_camera_zoom = false
script = ExtResource( 3 )
speed = Vector2( 10, 0 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground" index="0"]

editor/display_folded = true
position = Vector2( 10, -120 )
motion_scale = Vector2( 0.1, 0.3 )
motion_offset = Vector2( 0, 0 )
motion_mirroring = Vector2( 1280, 715 )
_sections_unfolded = [ "Motion" ]

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer" index="0"]

scale = Vector2( 1.25245, 1.2 )
texture = ExtResource( 4 )
centered = false
region_rect = Rect2( 0, 0, 1000, 600 )

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground" index="1"]

editor/display_folded = true
position = Vector2( 0, 740 )
motion_scale = Vector2( 2, 2 )
motion_offset = Vector2( 0, 0 )
motion_mirroring = Vector2( 1280, 0 )

[node name="Sprite2" type="Sprite" parent="ParallaxBackground/ParallaxLayer2" index="0"]

position = Vector2( 0, -740 )

[node name="Wall" type="Sprite" parent="ParallaxBackground" index="2"]

position = Vector2( 630, 700 )
scale = Vector2( 0.569878, 0.0740017 )
texture = ExtResource( 5 )

[node name="Wall2" type="Sprite" parent="ParallaxBackground" index="3"]

position = Vector2( 640, 20 )
scale = Vector2( 0.569878, 0.0740017 )
texture = ExtResource( 5 )

[node name="Logo" type="Sprite" parent="." index="4"]

position = Vector2( 870, 410 )
scale = Vector2( 0.266, 0.266 )
texture = ExtResource( 6 )


